# psycopg-ra-tls

./: README.md  pyproject.toml
src/psycopg_ratls/: __init__.py  connect.py  connect_manifest.py  discovery.py  forwarder.py  manifest.py
tests/: test_discovery.py  test_manifest.py
